# ihale-mcp

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.eu  Dockerfile.maps  Dockerfile.tr  README.md  calistirma.txt  docker-compose.yml  google_places_client.py  google_sheets_writer.py  ihale_mcp.py  ihale_models.py  leads_models.py  maps_mcp.py  pyproject.toml  requirements.txt  ted_api_client.py  ted_mcp.py  ted_models.py
